--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   
   <body> 
-    <script src="peer_JS2_01.js"></script>
+    <script src="peer_JS2_01_work.js"></script>
   </body>
 
 
